{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 4,
  "lineage": "84ce0c09-2bfc-b970-9237-ab746e4a7e39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group/sg-091a62ee67c6d985f",
            "description": "sg created by terraform",
            "egress": [],
            "id": "sg-091a62ee67c6d985f",
            "ingress": [],
            "name": "Terraform-Firewall",
            "name_prefix": "",
            "owner_id": "348144893552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0055ae8b4cfdb08cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-0f6ffdb5490b7e1cc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f6ffdb5490b7e1cc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091a62ee67c6d985f",
            "security_group_rule_id": "sgr-0f6ffdb5490b7e1cc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:348144893552:security-group-rule/sgr-0bf87524149afe285",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0bf87524149afe285",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091a62ee67c6d985f",
            "security_group_rule_id": "sgr-0bf87524149afe285",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}